--- a/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
+++ b/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
@@ -869,7 +869,7 @@ paths:
       tags: 
         - lookup Amex Program Asset Codes Endpoint Definition
       x-group-name: lookup
-      x-product-child-name: lookup
+      x-product-child-name: CoPilot
       x-proxy-name: Amex Program Asset Codes
       summary: A GET endpoint call to retrieve all possible Amex access codes.
       description: |+
@@ -903,7 +903,7 @@ paths:
       tags: 
         - lookup Attachment Type Codes Endpoint Definition
       x-group-name: lookup
-      x-product-child-name: lookup
+      x-product-child-name: CoPilot
       x-proxy-name: Attachment Type Codes
       summary: A GET endpoint call to retrieve all possible Attachment Type Codes.
       description: |+
@@ -937,7 +937,7 @@ paths:
       tags: 
         - lookup Back End Platform Codes Endpoint Definition
       x-group-name: lookup
-      x-product-child-name: lookup
+      x-product-child-name: CoPilot
       x-proxy-name: Back End Platform Codes
       summary: A GET endpoint call to retrieve all possible Back End Platform Codes.
       description: |+
