--- a/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
+++ b/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
@@ -869,7 +869,7 @@ paths:
       tags: 
         - lookup Amex Program Asset Codes Endpoint Definition
       x-group-name: lookup
-      x-product-child-name: CoPilot
+      x-child-product-name: CoPilot
       x-proxy-name: Amex Program Asset Codes
       summary: A GET endpoint call to retrieve all possible Amex access codes.
       description: |+
@@ -903,7 +903,7 @@ paths:
       tags: 
         - lookup Attachment Type Codes Endpoint Definition
       x-group-name: lookup
-      x-product-child-name: CoPilot
+      x-child-product-name: CoPilot
       x-proxy-name: Attachment Type Codes
       summary: A GET endpoint call to retrieve all possible Attachment Type Codes.
       description: |+
@@ -937,7 +937,7 @@ paths:
       tags: 
         - lookup Back End Platform Codes Endpoint Definition
       x-group-name: lookup
-      x-product-child-name: CoPilot
+      x-child-product-name: CoPilot
       x-proxy-name: Back End Platform Codes
       summary: A GET endpoint call to retrieve all possible Back End Platform Codes.
       description: |+
@@ -971,7 +971,7 @@ paths:
       tags: 
         - lookup Bank Account Types Endpoint Definition
       x-group-name: lookup
-      x-product-child-name: CoPilot
+      x-child-product-name: CoPilot
       x-proxy-name: Bank Account Types
       summary: A GET endpoint call to retrieve all possible Bank Account Types.
       description: |+
@@ -1005,7 +1005,7 @@ paths:
       tags: 
         - lookup Bill To Codes Endpoint Definition
       x-group-name: lookup
-      x-product-child-name: CoPilot
+      x-child-product-name: CoPilot
       x-proxy-name: Bill To Codes
       summary: A GET endpoint call to retrieve all possible Bill To Codes.
       description: |+
