--- a/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
+++ b/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
@@ -867,9 +867,10 @@ paths:
   /lookup/amexProgramAssetCodes:
     get:
       tags: 
-        - lookup Amex Program Asset Codes Endpoint Definition
+        - lookup
       x-group-name: lookup
       x-child-product-name: CoPilot
+      operationId: amexProgramAssetCodes
       x-proxy-name: Amex Program Asset Codes
       summary: A GET endpoint call to retrieve all possible Amex access codes.
       description: |+
@@ -901,9 +902,10 @@ paths:
   /lookup/attachmentTypeCodes:
     get:
       tags: 
-        - lookup Attachment Type Codes Endpoint Definition
+        - lookup
       x-group-name: lookup
       x-child-product-name: CoPilot
+      operationId: attachmentTypeCodes
       x-proxy-name: Attachment Type Codes
       summary: A GET endpoint call to retrieve all possible Attachment Type Codes.
       description: |+
@@ -935,9 +937,10 @@ paths:
   /lookup/backEndPlatformCodes:
     get:
       tags: 
-        - lookup Back End Platform Codes Endpoint Definition
+        - lookup
       x-group-name: lookup
       x-child-product-name: CoPilot
+      operationId: backEndPlatformCodes
       x-proxy-name: Back End Platform Codes
       summary: A GET endpoint call to retrieve all possible Back End Platform Codes.
       description: |+
@@ -969,10 +972,11 @@ paths:
   /lookup/bankAcctTypes:
     get:
       tags: 
-        - lookup Bank Account Types Endpoint Definition
+        - lookup
       x-group-name: lookup
       x-child-product-name: CoPilot
       x-proxy-name: Bank Account Types
+      operationId: bankAcctTypes
       summary: A GET endpoint call to retrieve all possible Bank Account Types.
       description: |+
        A GET endpoint call to retrieve all possible Bank Account Types.
@@ -1003,10 +1007,11 @@ paths:
   /lookup/billToCodes:
     get:
       tags: 
-        - lookup Bill To Codes Endpoint Definition
+        - lookup
       x-group-name: lookup
       x-child-product-name: CoPilot
       x-proxy-name: Bill To Codes
+      operationId: billToCodes
       summary: A GET endpoint call to retrieve all possible Bill To Codes.
       description: |+
        A GET endpoint call to retrieve all possible Bill To Codes.
