--- a/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
+++ b/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
@@ -869,7 +869,7 @@ paths:
       tags: 
         - lookup
       x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-child-product-name: lookup
       operationId: amexProgramAssetCodes
       x-proxy-name: Amex Program Asset Codes
       summary: A GET endpoint call to retrieve all possible Amex access codes.
@@ -904,7 +904,7 @@ paths:
       tags: 
         - lookup
       x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-child-product-name: lookup
       operationId: attachmentTypeCodes
       x-proxy-name: Attachment Type Codes
       summary: A GET endpoint call to retrieve all possible Attachment Type Codes.
@@ -939,7 +939,7 @@ paths:
       tags: 
         - lookup
       x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-child-product-name: lookup
       operationId: backEndPlatformCodes
       x-proxy-name: Back End Platform Codes
       summary: A GET endpoint call to retrieve all possible Back End Platform Codes.
@@ -974,7 +974,7 @@ paths:
       tags: 
         - lookup
       x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-child-product-name: lookup
       x-proxy-name: Bank Account Types
       operationId: bankAcctTypes
       summary: A GET endpoint call to retrieve all possible Bank Account Types.
@@ -1009,7 +1009,7 @@ paths:
       tags: 
         - lookup
       x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-child-product-name: lookup
       x-proxy-name: Bill To Codes
       operationId: billToCodes
       summary: A GET endpoint call to retrieve all possible Bill To Codes.
@@ -1030,6 +1030,42 @@ paths:
               schema: 
                 $ref: '#/components/schemas/bankAcctTypesResponse'
               example: {"billToCodes": [{ "code": "PARTNER",  "name": "Partner Residuals" },{       "code": "PARTNERCC","name": "Partner Credit Card"}, {"code": "CUST","name": "Customer"}]}
+        400:
+          description: Not Found
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/NotFoundError'}
+        404:
+          description: Bad Request
+          content:  
+            application/json:
+              schema: {$ref: '#/components/schemas/BadRequestError'}
+  /lookup/billToDetailCodes:
+    get:
+      tags: 
+        - lookup
+      x-group-name: lookup
+      x-child-product-name: lookup
+      x-proxy-name: Bill To Details
+      operationId: billToDetailCodes
+      summary: A GET endpoint call to retrieve all possible Bill To Details.
+      description: |+
+       A GET endpoint call to retrieve all possible Bill To Details.
+      parameters:
+        - in: header
+          $ref: '#/components/parameters/ContentTypeHeader'
+        - in: header
+          $ref: '#/components/parameters/X-CopilotAPI-Version'
+        - in: header
+          $ref: '#/components/parameters/Authorization'
+      responses:
+        200: 
+          description: Success
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/bankAcctTypesResponse'
+              example: {"billToDetailCodes": [{"code": "CC", "name": "CardConnect"}, { "code": "INTSALE", "name": "Internal Sale"},{"code": "SWAP","name": "Swap"}, {"code": "NEXTECH","name": "NexTech"},{"code": "PO", "name": "Purchase Order"}]}
         400:
           description: Not Found
           content:
