--- a/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
+++ b/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
@@ -868,8 +868,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-group-name: CoPilot
+      x-child-product-name: lookup
       operationId: amexProgramAssetCodes
       x-proxy-name: Amex Program Asset Codes
       summary: A GET endpoint call to retrieve all possible Amex access codes.
@@ -903,8 +903,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-group-name: CoPilot
+      x-child-product-name: lookup
       operationId: attachmentTypeCodes
       x-proxy-name: Attachment Type Codes
       summary: A GET endpoint call to retrieve all possible Attachment Type Codes.
@@ -938,8 +938,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-group-name: CoPilot
+      x-child-product-name: lookup
       operationId: backEndPlatformCodes
       x-proxy-name: Back End Platform Codes
       summary: A GET endpoint call to retrieve all possible Back End Platform Codes.
@@ -973,8 +973,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-group-name: CoPilot
+      x-child-product-name: lookup
       x-proxy-name: Bank Account Types
       operationId: bankAcctTypes
       summary: A GET endpoint call to retrieve all possible Bank Account Types.
@@ -1008,8 +1008,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-group-name: CoPilot
+      x-child-product-name: lookup
       x-proxy-name: Bill To Codes
       operationId: billToCodes
       summary: A GET endpoint call to retrieve all possible Bill To Codes.
@@ -1044,8 +1044,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: lookup
-      x-child-product-name: CoPilot
+      x-group-name: CoPilot
+      x-child-product-name: lookup
       x-proxy-name: Bill To Detail Codes
       operationId: billToDetailCodes
       summary: A GET endpoint call to retrieve all possible Bill To Detail Codes.
