--- a/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
+++ b/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
@@ -605,7 +605,7 @@ paths:
       tags: 
         - order List GET Endpoint Definition
       x-group-name: CoPilot
-      x-proxy-name: orderlist GET
+      x-proxy-name: order list GET
       x-default-example: PaymentCard
       summary: The Equipment Catalog endpoint provides a list of terminals, gateways, and software available for ordering based on the Sales Code supplied in the query string. Use the endpoint to determine the equipment ID of a add-on to be used in a subsequent call to the Create Order endpoint.
       description: |+
@@ -868,8 +868,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: CoPilot
-      x-child-product-name: lookup
+      x-group-name: lookup
+      x-child-product-name: CoPilot
       operationId: amexProgramAssetCodes
       x-proxy-name: Amex Program Asset Codes
       summary: A GET endpoint call to retrieve all possible Amex access codes.
@@ -903,8 +903,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: CoPilot
-      x-child-product-name: lookup
+      x-group-name: lookup
+      x-child-product-name: CoPilot
       operationId: attachmentTypeCodes
       x-proxy-name: Attachment Type Codes
       summary: A GET endpoint call to retrieve all possible Attachment Type Codes.
@@ -938,8 +938,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: CoPilot
-      x-child-product-name: lookup
+      x-group-name: lookup
+      x-child-product-name: CoPilot
       operationId: backEndPlatformCodes
       x-proxy-name: Back End Platform Codes
       summary: A GET endpoint call to retrieve all possible Back End Platform Codes.
@@ -973,8 +973,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: CoPilot
-      x-child-product-name: lookup
+      x-group-name: lookup
+      x-child-product-name: CoPilot
       x-proxy-name: Bank Account Types
       operationId: bankAcctTypes
       summary: A GET endpoint call to retrieve all possible Bank Account Types.
@@ -1008,8 +1008,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: CoPilot
-      x-child-product-name: lookup
+      x-group-name: lookup
+      x-child-product-name: CoPilot
       x-proxy-name: Bill To Codes
       operationId: billToCodes
       summary: A GET endpoint call to retrieve all possible Bill To Codes.
@@ -1044,8 +1044,8 @@ paths:
     get:
       tags: 
         - lookup
-      x-group-name: CoPilot
-      x-child-product-name: lookup
+      x-group-name: lookup
+      x-child-product-name: CoPilot
       x-proxy-name: Bill To Detail Codes
       operationId: billToDetailCodes
       summary: A GET endpoint call to retrieve all possible Bill To Detail Codes.
